Fixes lyrics overlaps issue

--- a/index.css
+++ b/index.css
@@ -36,7 +36,7 @@ html {
   border-radius: 5px;
   text-align: center;
   height: 100px;
-  width: 95%;
+  width: 60%;
   border: 1px solid blue;
   overflow: hidden;
   padding-top: 50px;
@@ -45,5 +45,17 @@ html {
 }
 #lyric-container div {
   margin-bottom: 5px;
-  height: 20px;
+  min-height: 1em; /* Make the empty lyric container visible. */
+}
+
+/* Make all lyric items relative to the container */
+#lyric-wrapcontainer {
+  position:  relative;
+}
+
+/* For mobile devices */
+@media (max-width: 768px) {
+  #lyric-container {
+    width: 90%;
+  }
 }
